# JobHunter

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE_REVIEW.md  PRODUCTION_READINESS_REVIEW.md  README.md  REVIEW.md  TESTING_COVERAGE_RECOMMENDATIONS.md  package.json  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260519_01_create_resumes.py
app/: layout.tsx  main.py  page.tsx
app/api/: dependencies.py
app/api/resume-upload/: route.ts
app/api/routes/: resume_routes.py
app/core/: config.py
app/db/: session.py
app/dtos/: resume.py
app/models/: resume.py
app/openai_client/: resume_extractor.py
app/repositories/: resume_repository.py
app/services/: file_parser_service.py  resume_service.py
apps/api/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/v1/: router.py
apps/api/app/core/: settings.py
apps/api/app/db/: session.py
apps/api/app/dependencies/: container.py
apps/api/app/schemas/: __init__.py
apps/api/tests/: test_health.py
apps/web/: .eslintrc.cjs  Dockerfile  package.json
apps/web/app/: page.tsx
backend/tests/: conftest.py
backend/tests/fixtures/: factories.py
components/resume/: Dropzone.tsx  ProfilePreview.tsx  UploadStatus.tsx
components/ui/: button.tsx  card.tsx  progress.tsx
docs/: resume_parsing_schema.md
hooks/: useResumeUpload.ts
infra/docker/: docker-compose.yml
lib/api/: resume.ts
scripts/: bootstrap.sh
sql/: resume_schema.sql
tests/: test_resume_routes.py  test_resume_service.py
types/: resume.ts
(+9 files in other folders)
