[project]
name = "jobhunter-backend"
version = "0.1.0"
description = "Resume upload backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29.0",
  "alembic>=1.13.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.9",
  "pypdf>=4.2.0",
  "python-docx>=1.1.2",
  "openai>=1.40.0",
  "tenacity>=8.5.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
