[project]
name = "jobhunter-api"
version = "0.1.0"
description = "FastAPI backend for AI Job Hunter"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "asyncpg>=0.30.0",
  "fastapi>=0.115.0",
  "pydantic-settings>=2.5.2",
  "python-dotenv>=1.0.1",
  "redis>=5.1.1",
  "sqlalchemy>=2.0.35",
  "uvicorn[standard]>=0.31.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.2",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.9",
  "mypy>=1.11.2"
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = []
